--- a/src/app/main-page/skills/growth-mindset/growth-mindset.component.scss
+++ b/src/app/main-page/skills/growth-mindset/growth-mindset.component.scss
@@ -4,11 +4,9 @@
 #growth-mindset {
   @include cardBoxStyle($bc: $main-ivory);
   @include dFlex($fd: column);
-  width: 240px;
+  width: 300px;
   max-width: 360px;
-  min-width: 300px;
   background-color: $main-yellow;
-  
 
   p {
     margin-top: 16px;
@@ -34,25 +32,21 @@ button {
   align-self: flex-end;
   width: 32px;
   height: 32px;
-  background: url("./../../../../../public/assets/img/icons/close-ivory.svg")
-    no-repeat center / cover;
+  background: url("./../../../../../public/assets/img/icons/close-ivory.svg") no-repeat center / cover;
 
   &:hover {
     cursor: pointer;
   }
 
   &:active {
-    background: url("./../../../../../public/assets/img/icons/close-hover.svg")
-      no-repeat center / cover;
+    background: url("./../../../../../public/assets/img/icons/close-hover.svg") no-repeat center / cover;
   }
 }
 
-// #region media queries
-// @media (max-width: 820px) {
-//   #growth-mindset {
-//     // width: 200px;
-//     // box-sizing: border-box;
-//   }
-// }
+@media (max-width: 340px) {
+  #growth-mindset {
+    width: 280px;
+  }
+}
 
 // #endregion
